--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><meta http-equiv="X-UA-Compatible" content="ie=edge"><title>Задание 2.1 - Промисификация</title><style>body {
+<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><meta http-equiv="X-UA-Compatible" content="ie=edge"><title>Задание 2 - Промисификация</title><style>body {
       min-height: 100vh;
       margin: 0;
       display: flex;
@@ -20,4 +20,4 @@
       display: block;
       max-width: 100%;
       height: auto;
-    }</style><link href="main.0.84faecd70321cad1e512.css" rel="stylesheet"></head><body><article class="intro"><h1>Задание 2.1 - Промисификация</h1><img src="images/intro.png" alt="" width="640"></article><script src="runtime.1ee16c2201d417984a0f.js"></script><script src="main.2351e781ec67fc5f4494.js"></script></body></html>
+    }</style><link href="main.0.84faecd70321cad1e512.css" rel="stylesheet"></head><body><article class="intro"><h1>Задание 2 - Промисификация</h1><img src="https://picsum.photos/640/300" alt="" width="640"></article><script src="runtime.1ee16c2201d417984a0f.js"></script><script src="vendors.8435745513e47adfc2ce.js"></script><script src="main.38329ce38a1b3b6c59f7.js"></script></body></html>
